Prepping for vue

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -15,6 +15,7 @@
     <script src="/res/growl.js"></script>
     <script src="/res/autosize.min.js"></script>
     <script src="/res/jkanban.js"></script>
+    <script src="/res/socket.js"></script>
     <script src="/res/kanban.js"></script>
   </head>
   <body>
