Basic add-card functionality

--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -1,1 +1,7 @@
+<nav class="demo" style="position: absolute;">
+  <a href="/" class="brand">TaskFocus</a>
+</nav>
+<center style="margin-top: 50px;">
+<h2>Tasks in Focus</h2>
+</center>
 <div id="myKanban"></div>
