--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -11,14 +11,16 @@
     <link href="https://unpkg.com/picnic" rel="stylesheet">
     <link rel="stylesheet" href="/res/growl.css">
     <link rel="stylesheet" href="/res/jkanban.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="/res/growl.js"></script>
     <script src="/res/autosize.min.js"></script>
-    <script src="/res/jkanban.js"></script>
-    <script src="/res/socket.js"></script>
-    <script src="/res/kanban.js"></script>
   </head>
   <body>
     {{{yield}}}
+    <script src="/res/socket.js"></script>
+    <script src="/res/kanban.js"></script>
+    <script src="/res/main.js"></script>
   </body>
 </html>
