--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -5,8 +5,8 @@
 <h2>Tasks in Focus</h2>
 </center>
 <div id="myKanban">
-  <div class="kanban-container">
-    <div class="kanban-board" v-for="board in boardList" v-bind:data-id="board.id" v-bind:style="{'width': boardWidth, 'margin-left': gutter, 'margin-right': gutter}">
+  <div class="kanban-container" v-bind:style="{'width': wallWidth+'px'}">
+    <div class="kanban-board" v-for="board in boardList" v-bind:data-id="board.id" v-bind:style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
       <header class="kanban-board-header">
         <div class="kanban-title-board">\{{board.title}}</div>
       </header>
@@ -14,6 +14,17 @@
         <div class="kanban-item" v-for="card in board.item" v-bind:data-eid="card.id">\{{card.title}}</div>
       </main>
       <footer></footer>
+    </div>
+    <div class='kanban-board' v-bind:style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
+      <header class='kanban-board-header'>
+        <a class='kanban-addboard-btn'>+ Add Board</a>
+        <div class='kanban-addboard-form' style="display: none">
+          <input type="text" placeholder="Add Board"></input>
+          <br>
+          <button type="submit">Save</button>
+          <a class="cancel" style="font-size: 24px; float: right;">X</a>
+        </div>
+      </header>
     </div>
   </div>
 </div>
