--- a/res/jkanban.css
+++ b/res/jkanban.css
@@ -22,7 +22,7 @@
   .kanban-board header {
     font-size: 16px;
     padding: 15px; }
-    .kanban-board header .kanban-title-board {
+    .kanban-board header .kanban-board-title {
       font-weight: 700;
       margin: 0;
       padding: 0; }
