--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -16,6 +16,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="/res/growl.js"></script>
     <script src="/res/autosize.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
   </head>
   <body>
     {{{yield}}}
