Got ordering of cards mostly working. Slight issue with order numbering.

--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -5,19 +5,23 @@
 <h2>Tasks in Focus</h2>
 </center>
 <div id="myKanban">
-  <div class="kanban-container" v-bind:style="{'width': wallWidth+'px'}">
-    <div class="kanban-board" v-for="board in boardList" v-bind:data-id="board.id" v-bind:style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
+  <div class="kanban-container" :style="{'width': wallWidth+'px'}">
+    <div class="kanban-board" v-for="board in boardList" :data-id="board.id" :style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
       <header class="kanban-board-header">
         <div class="kanban-board-title">\{{board.id}} - \{{board.title}}</div>
         <div class='kanban-board-title-form' style="display: none">
-          <input type="text" v-bind:value="board.title" v-bind:defaultvalue="board.title"></input>
+          <input type="text" :value="board.title" :defaultvalue="board.title"></input>
           <br>
           <button type="submit">Save</button>
           <a class="cancel" style="font-size: 24px; float: right;">X</a>
         </div>
       </header>
       <main class="kanban-drag">
-        <div class="kanban-item" v-for="card in board.item" v-bind:data-eid="card.id">\{{card.id}} - \{{card.order}}<br>\{{card.title}}</div>
+        <div class="kanban-item" v-for="card in getCardArray(board.id)" :data-eid="card.id" :data-order="card.order">
+          <!--\{{card.id}} - \{{card.order}}
+          <br>-->
+          \{{card.title}}
+        </div>
       </main>
       <footer>
         <div class='kanban-add'>+ Add Item</div>
@@ -29,7 +33,7 @@
         </div>
       </footer>
     </div>
-    <div class='kanban-board' v-bind:style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
+    <div class='kanban-board' :style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
       <header class='kanban-board-header'>
         <a class='kanban-addboard-btn'>+ Add Board</a>
         <div class='kanban-addboard-form' style="display: none">
