--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -19,9 +19,17 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
   </head>
   <body>
+    {{#if accountID}}
+      <nav class="demo" style="position: absolute;">
+        <a href="/" class="brand" style="margin-right: 20px; border-right: .5px solid #333;">TaskFocus</a>
+        <div class="menu" style="float: left">
+          {{#each userWalls}}
+            <a href="/focus/{{accountID}}/{{this.ID}}" class="pseudo button">{{this.Name}}</a>
+          {{/each}}
+          <a onclick="prompt('Name the new wall:')" class="pseudo button">+ Add Wall</a>
+        </div>
+      </nav>
+    {{/if}}
     {{{yield}}}
-    <script src="/res/socket.js"></script>
-    <script src="/res/kanban.js"></script>
-    <script src="/res/main.js"></script>
   </body>
 </html>
