--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -8,7 +8,7 @@
       <header class="kanban-board-header">
         <div class="kanban-board-title">\{{board.id}} - \{{board.name}}</div>
         <div class='kanban-board-title-form' style="display: none">
-          <input type="text" :value="board.title" :defaultvalue="board.name"></input>
+          <input type="text" :value="board.name" :defaultvalue="board.name"></input>
           <br>
           <button type="submit">Save</button>
           <a class="cancel" style="font-size: 24px; float: right;">X</a>
