--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -26,7 +26,7 @@
           {{#each userWalls}}
             <a href="/focus/{{accountID}}/{{this.ID}}" class="pseudo button">{{this.Name}}</a>
           {{/each}}
-          <a onclick="prompt('Name the new wall:')" class="pseudo button">+ Add Wall</a>
+          <a class="kanban-addwall-btn pseudo button">+ Add Wall</a>
         </div>
       </nav>
     {{/if}}
