--- a/views/user.hbs
+++ b/views/user.hbs
@@ -5,8 +5,8 @@
 </center>
 <div style="display: flex; justify-content: space-around;">
   {{#each userWalls}}
-    <div style="width: 250px; height: 120px; background-color: #bbb; padding: 20px;">
-      <a href="/focus/{{accountID}}/{{this.ID}}" style="font-size: 22px; font-weight: bold">{{this.Name}}</a>
+    <div style="width: 250px; height: 120px; background-color: #bbb; padding: 20px; border-radius: 5px;">
+      <a href="/focus/{{accountID}}/{{this.ID}}" style="font-size: 22px; font-weight: bold; color: #333">{{this.Name}}</a>
     </div>
   {{/each}}
 </div>
