--- a/res/style.css
+++ b/res/style.css
@@ -21,16 +21,16 @@ body{font-family: "Lato"; margin:0; padding: 0;}
 .kanban-add:hover{
   background: #fff;
 }
-.kanban-add-textarea. .kanban-card-title-textarea{
+.kaban-card-title{
+  font-size: 16px;
+}
+.kanban-add-textarea, .kanban-card-title-textarea{
   font-family: Lato;
   font-size: 16px;
   padding: 15px;
-  width: 96%;
-  margin-left: 2%;
   margin-top: -1px;
   border-radius: 3px;
-  border: none;
-  outline: none;
+  border: 1px solid black;
   resize: vertical;
   overflow: visible;
 }
