--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -1,57 +1,67 @@
-<center style="margin-top: 50px;">
-<h2>Tasks in Focus: {{wallName}}</h2>
-</center>
-<div id="myKanban" style="min-height: 100%; width: 100%; overflow-x: scroll;">
-  <div class="kanban-container" :style="{'width': wallWidth+'px'}">
-    <div class="kanban-board" v-for="board in boardList" :data-id="board.id" :style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
-      <header class="kanban-board-header">
-        <div class="kanban-board-title">\{{board.id}} - \{{board.name}}</div>
-        <div class='kanban-board-title-form' style="display: none">
-          <input type="text" :value="board.name" :defaultvalue="board.name"></input>
-          <br>
-          <button type="submit">Save</button>
-          <a class="cancel" style="font-size: 24px; float: right;">X</a>
-        </div>
-      </header>
-      <main class="kanban-drag">
-        <div class="kanban-item" v-for="card in getCardArray(board.id)" :data-eid="card.id" :data-order="card.order">
-          <!--\{{card.id}} - \{{card.order}}
-          <br>-->
-          <div class="kanban-card-title">\{{card.title}}</div>
-          <div class='kanban-card-title-form' style="display: none">
-            <textarea class="kanban-card-title-textarea" :value="card.title" :defaultvalue="card.title"></textarea>
+<div id="jkanban" style="height: 90%">
+  <center style="margin-top: 50px;">
+    <h2>
+      Tasks in Focus: <span class="kanban-wall-name">\{{wallName}}</span>
+      <span class='kanban-wall-name-form' style="display: none; font-size: 20px">
+        <input type="text" :value="wallName" :defaultvalue="wallName" style="width: 250px;"></input>
+        <button type="submit">Save</button>
+        <a class="button error cancel">X</a>
+      </span>
+    </h2>
+  </center>
+  <div id="kanban-outer-container" style="min-height: 100%; width: 100%; overflow-x: scroll;">
+    <div class="kanban-container" :style="{'width': wallWidth+'px'}">
+      <div class="kanban-board" v-for="board in boardList" :data-id="board.id" :style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
+        <header class="kanban-board-header">
+          <div class="kanban-board-title">\{{board.id}} - \{{board.name}}</div>
+          <div class='kanban-board-title-form' style="display: none">
+            <input type="text" :value="board.name" :defaultvalue="board.name"></input>
             <br>
             <button type="submit">Save</button>
             <a class="cancel" style="font-size: 24px; float: right;">X</a>
           </div>
-        </div>
-      </main>
-      <footer>
-        <div class='kanban-add'>+ Add Item</div>
-        <div class='kanban-addcard-form' style="display: none">
-          <textarea class='kanban-add-textarea'></textarea>
-          <br>
-          <button class='kanban-add-btn'>Add</button>
-          <a class="cancel" style="font-size: 24px; float: right;">X</a>
-        </div>
-      </footer>
-    </div>
-    <div class='kanban-board' :style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
-      <header class='kanban-board-header'>
-        <a class='kanban-addboard-btn'>+ Add Board</a>
-        <div class='kanban-addboard-form' style="display: none">
-          <input type="text" placeholder="Add Board"></input>
-          <br>
-          <button type="submit">Save</button>
-          <a class="cancel" style="font-size: 24px; float: right;">X</a>
-        </div>
-      </header>
+        </header>
+        <main class="kanban-drag">
+          <div class="kanban-item" v-for="card in getCardArray(board.id)" :data-eid="card.id" :data-order="card.order">
+            <!--\{{card.id}} - \{{card.order}}
+            <br>-->
+            <div class="kanban-card-title" style="white-space: pre-wrap;">\{{card.title}}</div>
+            <div class='kanban-card-title-form' style="display: none">
+              <textarea class="kanban-card-title-textarea" :value="card.title" :defaultvalue="card.title"></textarea>
+              <br>
+              <button type="submit">Save</button>
+              <a class="cancel" style="font-size: 24px; float: right;">X</a>
+            </div>
+          </div>
+        </main>
+        <footer>
+          <div class='kanban-add'>+ Add Item</div>
+          <div class='kanban-addcard-form' style="display: none">
+            <textarea class='kanban-add-textarea'></textarea>
+            <br>
+            <button class='kanban-add-btn'>Add</button>
+            <a class="cancel" style="font-size: 24px; float: right;">X</a>
+          </div>
+        </footer>
+      </div>
+      <div class='kanban-board' :style="{'width': boardWidth+'px', 'margin-left': gutter+'px', 'margin-right': gutter+'px'}">
+        <header class='kanban-board-header'>
+          <a class='kanban-addboard-btn'>+ Add Board</a>
+          <div class='kanban-addboard-form' style="display: none">
+            <input type="text" placeholder="Add Board"></input>
+            <br>
+            <button type="submit">Save</button>
+            <a class="cancel" style="font-size: 24px; float: right;">X</a>
+          </div>
+        </header>
+      </div>
     </div>
   </div>
 </div>
 <script>
   var urlAccountID = "{{accountID}}"
   var urlWallID = "{{wallID}}"
+  var urlWallName = "{{wallName}}"
 </script>
 <script src="/res/socket.js"></script>
 <script src="/res/kanban.js"></script>
