Hide template until we're done loading.

--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -1,4 +1,4 @@
-<div id="jkanban" style="height: 90%">
+<div id="jkanban" style="height: 90%; display: none;">
   <center style="margin-top: 50px;">
     <h2>
       Tasks in Focus: <span class="kanban-wall-name">\{{wallName}}</span>
