--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -1,3 +1,4 @@
+{{{partials.nav}}}
 <div id="jkanban" style="height: 90%; display: none;">
   <center style="margin-top: 50px;">
     <h2>
@@ -36,7 +37,7 @@
               <a class="cancel" style="font-size: 24px; float: right;">X</a>
             </div>
             <div style="position: absolute; top: 5px; right: -20px; background-color: #fff; color: black; padding: 3px;">
-              <i class="fas fa-edit"></i>              
+              <i class="fas fa-edit"></i>
             </div>
           </div>
         </main>
