--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -1,4 +1,5 @@
 {{{partials.nav}}}
+{{{partials.modal}}}
 <div id="jkanban" style="height: 90%; display: none;">
   <center style="margin-top: 50px;">
     <h2>
@@ -36,7 +37,7 @@
               <button type="submit">Save</button>
               <a class="cancel" style="font-size: 24px; float: right;">X</a>
             </div>
-            <div style="position: absolute; top: 5px; right: -20px; background-color: #fff; color: black; padding: 3px;">
+            <div class="card-edit-button" style="position: absolute; top: 5px; right: -20px; background-color: #fff; color: black; padding: 3px;">
               <i class="fas fa-edit"></i>
             </div>
           </div>
@@ -71,6 +72,7 @@
   var urlWallName = "{{wallName}}"
 </script>
 <script src="/res/socket.js"></script>
+<script src="/res/edit.js"></script>
 <script src="/res/kanban.js"></script>
 <script src="/res/main.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
