--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/res/style.css">
     <link href="https://unpkg.com/picnic" rel="stylesheet">
     <link rel="stylesheet" href="/res/growl.css">
-    <link rel="stylesheet" href="/res/jkanban.css">
+    <link rel="stylesheet" href="/res/kanban.css">
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
