Polishing code, prior to account integration

--- a/views/redirect.hbs
+++ b/views/redirect.hbs
@@ -4,6 +4,6 @@
   <h3>
     {{redirMsg}}
     <br><br>
-    <a href="{{redirUrl}}">Redirecting...</a>
+    <a href="{{redirURL}}">Redirecting...</a>
   </h3>
 </center>
