--- a/views/redirect.hbs
+++ b/views/redirect.hbs
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="1.5;URL={{redirUrl}}">
+<meta http-equiv="refresh" content="1.5;URL={{redirURL}}">
 <br><br>
 <center>
   <h3>
