Login stuff is working well!

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -17,6 +17,7 @@
     <script src="/res/growl.js"></script>
     <script src="/res/autosize.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
   </head>
   <body>
     {{{yield}}}
