--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,8 @@
+
 <center>
   <h2>Welcome to TaskFocus</h2>
+  <h4>This app is a free and open-source kanban system for organizing your tasks!</h4>
+  <h4>Built with <i class="fa fa-heart" aria-hidden="true" style="color: red"></i> + Golang + Vue.JS + MongoDB</h4>
+  <hr>
+  <a href="{{googleLoginURL}}"><img width=275 src="/res/img/google_login.png"></a>
 </center>
