--- a/views/user.hbs
+++ b/views/user.hbs
@@ -3,10 +3,12 @@
 <h2>Welcome User: {{accountID}}</h2>
 <hr>
 </center>
-<div style="display: flex; justify-content: space-around;">
+<div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
   {{#each userWalls}}
-    <div style="width: 250px; height: 120px; background-color: #bbb; padding: 20px; border-radius: 5px;">
-      <a href="/focus/{{accountID}}/{{this.ID}}" style="font-size: 22px; font-weight: bold; color: #333">{{this.Name}}</a>
+    <div style=" display: table; width: 250px; height: 120px; background-color: #bbb; padding: 20px; border-radius: 5px; margin-bottom: 10px;">
+      <div style="text-align: center; display: table-cell; vertical-align: middle;">
+        <a href="/focus/{{accountID}}/{{this.ID}}" style="font-size: 22px; font-weight: bold; color: #333">{{this.Name}}</a>
+      </div>
     </div>
   {{/each}}
 </div>
