--- a/views/nav.hbs
+++ b/views/nav.hbs
@@ -1,6 +1,6 @@
 {{#if accountID}}
   <nav class="demo" style="position: absolute;">
-    <a href="/{{#if accountID}}focus/{{accountID}}{{/if}}" class="brand" style="margin-right: 20px; border-right: .5px solid #333;">TaskFocus</a>
+    <a href="/{{#if accountID}}focus/{{accountID}}{{/if}}" class="brand" style="padding-right: 20px; margin-right: 10px; border-right: .5px solid #333;">TaskFocus</a>
 
     <input id="bmenub" type="checkbox" class="show">
     <label for="bmenub" class="burger pseudo button" style="font-weight: bold">&#9776;</label>
@@ -11,6 +11,7 @@
         <a href="/focus/{{accountID}}/{{this.ID}}" class="pseudo button">{{this.Name}}</a>
       {{/each}}
       <a class="kanban-addwall-btn pseudo button">+ Add Wall</a>
+      <a href="/api/logout" style="color: black; font-weight: bold; padding-left: 25px; border-left: .5px solid #333;">Log Out</a>
     </div>
   </nav>
 {{/if}}
