Changed file naming structure. Beginning add wall from user page functionality

--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -71,7 +71,6 @@
   var urlWallID = "{{wallID}}"
   var urlWallName = "{{wallName}}"
 </script>
-<script src="/res/socket.js"></script>
-<script src="/res/edit.js"></script>
-<script src="/res/kanban.js"></script>
-<script src="/res/main.js"></script>
+<script src="/res/kanbanAPI.js"></script>
+<script src="/res/editUI.js"></script>
+<script src="/res/kanbanUI.js"></script>
