--- a/views/user.hbs
+++ b/views/user.hbs
@@ -12,3 +12,7 @@
     </div>
   {{/each}}
 </div>
+<script>
+  var urlAccountID = "{{accountID}}"
+</script>
+<script src="/res/userAPI.js"></script>
