--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -37,7 +37,7 @@
               <button type="submit">Save</button>
               <a class="cancel" style="font-size: 24px; float: right;">X</a>
             </div>
-            <div class="card-edit-button" style="position: absolute; top: 5px; right: -20px; background-color: #fff; color: black; padding: 3px;">
+            <div class="card-edit-button" style="position: absolute; top: 5px; right: -20px;">
               <i class="fas fa-edit"></i>
             </div>
           </div>
