--- a/views/kanban.hbs
+++ b/views/kanban.hbs
@@ -41,7 +41,7 @@
               <i class="fas fa-arrows-alt"></i>
             </div>
             <div class="card-edit-button" style="position: absolute; bottom: -25px; right: 50px;">
-              <span :style="{color: ((card.tasks && card.tasks.length > 0) ? 'black' : '#bbb')}">
+              <span :style="{color: ((card.tasks && Object.keys(card.tasks).length > 0) ? 'black' : '#bbb')}">
                 <i class="fas fa-check"></i> <span v-html="tasksLeft(card)"></span>
               </span>
             </div>
