Strike-through and ordering of checked checklist items!

--- a/res/style.css
+++ b/res/style.css
@@ -4,6 +4,7 @@ body{font-family: "Lato"; margin:0; padding: 0;}
 .info{background: #2A92BF;}
 .warning{background: #F4CE46;}
 .error{background: #FB7D44;}
+.strikethrough{text-decoration: line-through;}
 .cancel{
   cursor: pointer;
 }
