--- a/views/modal.hbs
+++ b/views/modal.hbs
@@ -22,8 +22,11 @@
       <hr>
       <b>Checklist:</b>
       <hr>
-      <div class ="kanban-card-task-form">
-        <textarea placeholder="New checklist task..."></textarea>
+      <div style="width: 90%; margin: auto;" >
+        <div class ="kanban-card-task-form" style="position: relative;">
+          <textarea placeholder="New checklist task..." style="padding-right: 100px;"></textarea>
+          <button class="button btn-outline" style="position: absolute; top: 8px; right: 10px;">+</button>
+        </div>
       </div>
       <hr>
       <div id="kanban-checklist-container">
