--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/res/kanban.css">
     <link rel="stylesheet" href="/res/style.css">
 
+    <script src="/res/reconnecting-websocket.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="/res/growl.js"></script>
